--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
   },
   "author": "Youki Lewis",
   "license": "MIT",
-  "type": "module",
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.1",
