--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Youki Lewis",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.19",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
